# Dushi-26Summer-ISIP

./: .gitignore  CLIP_SETUP.md  DEBUG_GUIDE.md  business_layer_summary.md  data_layer_summary.md  frontend_summary.md  gradle.properties  settings.gradle.kts  ui_intergration_summary.md  workflow.md
app/: build.gradle.kts
app/src/androidTest/java/com/example/isip/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/cpp/vulkan-shaders/: ggml-vulkan-shaders.hpp
app/src/main/cpp/vulkan-shaders/shader-cpps/: acc.comp.cpp  acc.comp.cpp.d  add.comp.cpp  add.comp.cpp.d  add1.comp.cpp  add1.comp.cpp.d  add_id.comp.cpp  add_id.comp.cpp.d  arange.comp.cpp  arange.comp.cpp.d  argmax.comp.cpp  argmax.comp.cpp.d  argsort.comp.cpp  argsort.comp.cpp.d  argsort_large.comp.cpp  argsort_large.comp.cpp.d  col2im_1d.comp.cpp  col2im_1d.comp.cpp.d  concat.comp.cpp  concat.comp.cpp.d  contig_copy.comp.cpp  contig_copy.comp.cpp.d  conv2d_dw.comp.cpp  conv2d_dw.comp.cpp.d  conv2d_mm.comp.cpp  conv2d_mm.comp.cpp.d  conv3d_mm.comp.cpp  conv3d_mm.comp.cpp.d  conv_transpose_1d.comp.cpp  conv_transpose_1d.comp.cpp.d  copy.comp.cpp  copy.comp.cpp.d  copy_from_quant.comp.cpp  copy_from_quant.comp.cpp.d  copy_to_quant.comp.cpp  copy_to_quant.comp.cpp.d  copy_transpose.comp.cpp  copy_transpose.comp.cpp.d  count_equal.comp.cpp  count_equal.comp.cpp.d  (+214 more)
app/src/main/java/com/example/isip/: MainActivity.kt  MultimodalTestActivity.kt
app/src/main/java/com/example/isip/ai/: InferenceEngine.kt  InferenceEngineImpl.kt  ModelConfig.kt  ModelLoader.kt
app/src/main/java/com/example/isip/data/: AppDatabase.kt  AppSettingsRepository.kt  PhotoRepository.kt  VideoRepository.kt
app/src/main/java/com/example/isip/data/ai/: Gemma4Model.kt  GemmaInferenceEngine.kt  GemmaPhotoContentAnalyzer.kt  HybridPhotoContentAnalyzer.kt  LlamaCppNative.kt  LlamaCppWrapper.kt  MobileClipEngine.kt  ModelManager.kt  PhotoContentAnalyzer.kt  PromptManager.kt  QwenInferenceEngine.kt  QwenModel.kt  QwenPhotoContentAnalyzer.kt
app/src/main/java/com/example/isip/data/dao/: AnalysisResultDao.kt
app/src/main/java/com/example/isip/data/db/: AgentLogDao.kt  AgentLogEntity.kt  AppDatabase.kt  CleanupCandidateDao.kt  CleanupCandidateEntity.kt  Converters.kt  ManualTagDao.kt  ManualTagEntity.kt  ManualTagWithAssetId.kt  PhotoAiDao.kt  PhotoAiEntity.kt  PhotoAiWithAssetId.kt  PhotoDao.kt  PhotoEntity.kt  SmartAlbumDao.kt  SmartAlbumEntity.kt
app/src/main/java/com/example/isip/data/media/: MediaStorePhotoDeletion.kt
app/src/main/java/com/example/isip/data/model/: CleanupReview.kt  ImageAnalysisResult.kt  OrganizationPlan.kt  Photo.kt  SearchResult.kt  SmartAlbum.kt  VideoAsset.kt
app/src/main/java/com/example/isip/domain/agent/: PhotoAgentEngine.kt
app/src/main/java/com/example/isip/domain/skill/: AddTagSkill.kt  AnalyzeImageSkill.kt  CreateSmartAlbumSkill.kt  DeletePhotoSkill.kt  FindDuplicateVideosSkill.kt  FindDuplicatesSkill.kt  FindSimilarPhotosSkill.kt  GenerateStrategySkill.kt  ReviewCleanupSkill.kt  SearchPhotosSkill.kt  SemanticSearchSkill.kt  Skill.kt  SkillRegistry.kt  SummarizeSelectionSkill.kt
app/src/main/java/com/example/isip/domain/usecase/: AddTagUseCase.kt  AnalyzePhotosUseCase.kt  CleanupCoordinatorUseCase.kt  FindDuplicateVideosUseCase.kt  FindSimilarPhotosUseCase.kt  OrganizePhotosUseCase.kt  SearchPhotosUseCase.kt  SmartAlbumUseCase.kt
app/src/main/java/com/example/isip/test/: GemmaIntegrationTest.kt  QwenIntegrationTest.kt
app/src/main/java/com/example/isip/ui/app/: ISIPApp.kt  ISIPBottomBar.kt  MainNavHost.kt
app/src/main/java/com/example/isip/ui/common/: ConfirmDialog.kt  EmptyState.kt  ErrorState.kt  LoadingState.kt  PermissionRequestContent.kt
app/src/main/java/com/example/isip/ui/gallery/: AnalysisStatusBar.kt  CategoryFilterRow.kt  GalleryScreen.kt  GalleryUiState.kt  GalleryViewModel.kt  PhotoGrid.kt  SmartAlbumSection.kt
app/src/main/java/com/example/isip/ui/model/: PhotoUiModel.kt
app/src/main/java/com/example/isip/ui/navigation/: Screen.kt
app/src/main/java/com/example/isip/ui/organize/: OrganizeComponents.kt  OrganizeScreen.kt  OrganizeViewModel.kt
app/src/main/java/com/example/isip/ui/photo/: OcrTextBlock.kt  PhotoDetailScreen.kt  PhotoDetailViewModel.kt
app/src/main/java/com/example/isip/ui/search/: SearchComponents.kt  SearchScreen.kt  SearchViewModel.kt
app/src/main/java/com/example/isip/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/example/isip/ui/smartalbum/: SmartAlbumScreen.kt  SmartAlbumViewModel.kt
app/src/main/java/com/example/isip/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/isip/utils/: Converters.kt  FileUtils.kt  ImageUtils.kt  JsonParser.kt
app/src/main/res/layout/: activity_multimodal_test.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/isip/: ExampleUnitTest.kt
app/src/test/java/com/example/isip/domain/skill/: AdditionalSkillsTest.kt  MediaSkillsTest.kt  SearchPhotosSkillTest.kt
doc/: directory.md  example.md  frontend.md  image_skills_frontend_handoff.md  plan.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: download_qwen35_vl.py  prepare_gemma4_model.py  prepare_mobileclip.py  qwen35_vl_server.py  test_qwen35_vl_service.py
